--- a/blogpost.html
+++ b/blogpost.html
@@ -1,12 +1,16 @@
 <html>
     <head>
-        <tittle>
-            Titulo del post
-        </tittle>
+        <title> Titulo del post</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog</h1>
-        <p>Y este es el parrafo de inicio</p>
+
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las ramas en github.</p>
+            </div>
+        </div>
+        
     </body>
 </html>
