Estructura inicial de cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
 
         <div id="container">
+            <div id="cabecera">Cabecera</div>
             <div id="post">
                 <h1>Este es el titulo del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las ramas en github.</p>
