Agregado el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,8 @@
         <div id="container">
             <div id="post">
                 <h1>Este es el titulo del post</h1>
+                <h2>Desde Sahagun</h2>
+                <h3>Cordoba, Colombia</h3>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las ramas en github.</p>
             </div>
         </div>
